--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Result</h1>
-    <p th:text="'id: ' + ${greeting.id}" />
-    <p th:text="'content: ' + ${greeting.content}" />
+    <p th:text="'Name: ' + ${buddyInfo.name}" />
+    <p th:text="'Phone Number: ' + ${buddyInfo.phoneNum}" />
     <a href="/greeting">Submit another message</a>
 
 </body>
